Add class MyView with UI handlers + test texture update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,13 +51,16 @@ endif()
 
 # Create an executable
 add_executable( poncaplot
+        src/myview.h
+        src/myview.cpp
                 src/main.cpp
                 )
 
 # Include settings
 target_include_directories(poncaplot PUBLIC
                             "${CMAKE_CURRENT_SOURCE_DIR}/external/nanogui/include"
-                            "${CMAKE_CURRENT_SOURCE_DIR}/external/ponca/")
+                            "${CMAKE_CURRENT_SOURCE_DIR}/external/ponca/"
+                            "${CMAKE_CURRENT_SOURCE_DIR}/src/")
 
 # Link settings
 target_link_libraries(poncaplot nanogui ${Eigen_Deps} ${OpenMP_link_libraries})
