--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,7 +20,7 @@ jobs:
     
     steps:
     - name: Install nanogui dependencies (ubuntu)
-      run: sudo apt-get install cmake xorg-dev libglu1-mesa-dev
+      run: sudo apt-get update && sudo apt-get install cmake xorg-dev libglu1-mesa-dev
       if: matrix.os == 'ubuntu-latest'
 
     - uses: actions/checkout@v3
