--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,7 @@ add_executable( poncaplot
 target_include_directories(poncaplot PUBLIC
                             "${CMAKE_CURRENT_SOURCE_DIR}/external/nanogui/include"
                             "${CMAKE_CURRENT_SOURCE_DIR}/external/ponca/"
+                            "${CMAKE_CURRENT_SOURCE_DIR}/external/argparse/include"
                             "${CMAKE_CURRENT_SOURCE_DIR}/src/")
 
 # Link settings
