Add bestfit type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.5.0)
 
 project("PoncaPlot")
 
@@ -70,6 +70,7 @@ add_executable( poncaplot
         src/drawingPass.h
         src/drawingPasses/distanceField.h
         src/drawingPasses/poncaFitField.h
+        src/drawingPasses/bestFieldFit.h
                 src/main.cpp
 )
 
