Add image saving in app
 - add namespace poncascope
 - add utility file appBase.h
 - move IO save function to appBase
 - use in CLI and GUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,8 @@ add_executable( poncaplot
         src/dataManager.cpp
         src/myview.h
         src/myview.cpp
+        src/appBase.h
+        src/appBase.cpp
         src/application.h
         src/application.cpp
         src/cli.h
