--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/stb"]
 	path = external/stb
 	url = https://github.com/nothings/stb.git
+[submodule "external/nanogui"]
+	path = external/nanogui
+	url = https://github.com/mitsuba-renderer/nanogui
